# flower

examples/: TFG_graficas.py
examples/quickstart-tensorflow/: pyproject.toml  run_and_plot.py  stats_sin_cifrado.py
examples/quickstart-tensorflow-he/: pyproject.toml  run_and_plot.py  stats_ckks.py
examples/quickstart-tensorflow-he/results/: history_HE_10r_run42.csv  history_HE_10r_run42.json  history_HE_10r_run43.csv  history_HE_10r_run43.json  history_HE_10r_run44.csv  history_HE_10r_run44.json  history_HE_20r_run42.csv  history_HE_20r_run42.json  history_HE_20r_run43.csv  history_HE_20r_run43.json  history_HE_20r_run44.csv  history_HE_20r_run44.json  history_HE_3r_run42.csv  history_HE_3r_run42.json  history_HE_3r_run43.csv  history_HE_3r_run43.json  history_HE_3r_run44.csv  history_HE_3r_run44.json  stats_resumen_ckks.csv
examples/quickstart-tensorflow-he/tfexample/: client_app.py  metrics_logger.py  server_app.py  task.py
examples/quickstart-tensorflow-phe/: pyproject.toml  run_and_plot.py  stats_phe.py
examples/quickstart-tensorflow-phe/pheexample/: __init__.py  client_app.py  server_app.py  task.py
examples/quickstart-tensorflow-phe/results/: history_PHE_10r_run42.csv  history_PHE_10r_run42.json  history_PHE_10r_run43.csv  history_PHE_10r_run43.json  history_PHE_10r_run44.csv  history_PHE_10r_run44.json  history_PHE_20r_run42.csv  history_PHE_20r_run42.json  history_PHE_20r_run43.csv  history_PHE_20r_run43.json  history_PHE_20r_run44.csv  history_PHE_20r_run44.json  history_PHE_3r_run42.csv  history_PHE_3r_run42.json  history_PHE_3r_run43.csv  history_PHE_3r_run43.json  history_PHE_3r_run44.csv  history_PHE_3r_run44.json  stats_resumen_phe.csv
examples/quickstart-tensorflow/results/: history_federated_10-rounds_run42.csv  history_federated_10-rounds_run42.json  history_federated_10-rounds_run43.csv  history_federated_10-rounds_run43.json  history_federated_10-rounds_run44.csv  history_federated_10-rounds_run44.json  history_federated_20-rounds_run42.csv  history_federated_20-rounds_run42.json  history_federated_20-rounds_run43.csv  history_federated_20-rounds_run43.json  history_federated_20-rounds_run44.csv  history_federated_20-rounds_run44.json  history_federated_3-rounds_run42.csv  history_federated_3-rounds_run42.json  history_federated_3-rounds_run43.csv  history_federated_3-rounds_run43.json  history_federated_3-rounds_run44.csv  history_federated_3-rounds_run44.json  stats_resumen_sin_cifrado.csv
examples/quickstart-tensorflow/tfexample/: client_app.py  server_app.py  task.py
src/py/flwr/server/grid/: grpc_grid.py  inmemory_grid.py
