[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tfexample"
version = "1.0.0"
description = "Federated Learning with Tensorflow/Keras and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.20.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.9.1, != 2.11.1 ; (platform_machine == \"x86_64\" or platform_machine == \"aarch64\")",
    "tensorflow-macos>=2.9.1, != 2.11.1 ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app."quickstart-tensorflow/tfexample/server_app.py:app"]
client-app = "quickstart-tensorflow/tfexample/client_app.py:app"
num-supernodes = 10
run-config = { num-server-rounds = 20, local-epochs = 1, batch-size = 32, learning-rate = 0.005, fraction-fit = 0.5, verbose = false, seed = 44 }

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
root-certificates = "./.cache/certificates/ca.crt"
